--- a/package/package.json
+++ b/package/package.json
@@ -7,6 +7,8 @@
   ],
   "main": "./dist/visiojs.umd.cjs",
   "module": "./dist/visiojs.js",
+  "unpkg": "./dist/visiojs.umd.js",
+  "jsdelivr": "./dist/visiojs.umd.js",
   "exports": {
     ".": {
       "import": "./dist/visiojs.js",
