--- a/package/package.json
+++ b/package/package.json
@@ -20,11 +20,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "prettier": "prettier --write src"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "eslint": "^9.26.0",
+    "prettier": "^3.6.2",
     "vite": "^6.3.5"
   },
   "dependencies": {
