--- a/package/package.json
+++ b/package/package.json
@@ -2,12 +2,14 @@
   "name": "visiojs",
   "version": "0.0.5",
   "type": "module",
+  "types": "types/visiojs.d.ts",
   "description": "Microsoft Visio javascript alternative for creating diagrams and schematics",
   "keywords": ["visio", "schematic", "flowchart", "schematic", "schematics", "diagram", "svg"],
   "author": "Will Kelsey",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
    "repository": {
     "type": "git",
